# Software-Engineering-Lab

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yaml
UML/: UML时序图.puml  UML用例图.puml  UML类图.puml  UML组件图.puml
src/: CMakeLists.txt  main.cpp  test.cpp
src/shop/: Administrator.cpp  Administrator.h  CMakelists.txt  ConfigManager.cpp  ConfigManager.h  NormalUser.cpp  NormalUser.h  Product.cpp  Product.h  ProductManager.cpp  ProductManager.h  ProductRepository.cpp  ProductRepository.h  User.cpp  User.h  UserRepository.cpp  UserRepository.h
src/ui/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  ProductDetailWidget.cpp  ProductDetailWidget.h  ProductDetailWidget.ui  ProductEditWidget.cpp  ProductEditWidget.h  ProductListWidget.cpp  ProductListWidget.h  ProductListWidget.ui
test/: CMakeLists.txt  test.cpp  test_integration.cpp  test_unit.cpp
